# ElorathZeroTrust

./: .gitignore  README.md
communicator/: Cargo.toml  baseline.json
communicator/src/: error.rs  gui.rs  ipc.rs  ipc_error.rs  learning.rs  main.rs  policies.rs  signatures.rs
sdk/: CMakeLists.txt  Driver.c  Driver_File.h  File.c  Regedit.c
src/: Driver.h  Driver_Process.h  Driver_Regedit.h
src/communicator/src/: ipc.rs  learning.rs
src/driver/: CMakeLists.txt  Process.c
src/filter/: FSFilter.cpp
